# summary-tools

./: .envrc-example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  summarize  summarize.py
.serena/: project.yml
docs/superpowers/plans/: 2026-05-15-playwright-article-fallback.md  2026-05-15-publish-date-filename.md
docs/superpowers/specs/: 2026-05-15-playwright-article-fallback-design.md  2026-05-15-publish-date-filename-design.md
